src/token_tree/snapshots/ling__token_tree__tests__token_tree_0.snap
---
source: src/token_tree/mod.rs
expression: "test_lex(\"( { ) } ( hello )\")"
---
([
  Group(
    bracket_kind: Round,
    tokens: [
      Group(
        bracket_kind: Curly,
        tokens: [],
        span: Span(
          start: 2,
          end: 3,
        ),
      ),
    ],
    span: Span(
      start: 0,
      end: 5,
    ),
  ),
  Group(
    bracket_kind: Round,
    tokens: [
      Token(Token(
        span: Span(
          start: 10,
          end: 15,
        ),
        kind: Ident("hello"),
      )),
    ],
    span: Span(
      start: 8,
      end: 17,
    ),
  ),
], "error: mismatched Opening(Curly)\n  ┌─ test_source:1:3\n  │\n1 │ ( { ) } ( hello )\n  │   ^\n\nerror: mismatched Closing(Curly)\n  ┌─ test_source:1:7\n  │\n1 │ ( { ) } ( hello )\n  │       ^\n\n")
