src/token_tree/snapshots/ling__token_tree__tests__token_tree_1.snap
---
source: src/token_tree/mod.rs
expression: "test_lex(\"{{{}}}\")"
---
(TokenList([
  Group(
    bracket_kind: Curly,
    tokens: TokenList([
      Group(
        bracket_kind: Curly,
        tokens: TokenList([
          Group(
            bracket_kind: Curly,
            tokens: TokenList([]),
            span: Span(
              start: 2,
              end: 4,
            ),
          ),
        ]),
        span: Span(
          start: 1,
          end: 5,
        ),
      ),
    ]),
    span: Span(
      start: 0,
      end: 6,
    ),
  ),
]), "")
