src/token_tree/snapshots/ling__token_tree__tests__token_tree_2.snap
---
source: src/token_tree/mod.rs
expression: "test_lex(\"(((\")"
---
(TokenList([
  Group(
    bracket_kind: Round,
    tokens: TokenList([
      Group(
        bracket_kind: Round,
        tokens: TokenList([
          Group(
            bracket_kind: Round,
            tokens: TokenList([]),
            span: Span(
              start: 2,
              end: 3,
            ),
          ),
        ]),
        span: Span(
          start: 1,
          end: 3,
        ),
      ),
    ]),
    span: Span(
      start: 0,
      end: 3,
    ),
  ),
]), "error: mismatched Opening(Round)\n  ┌─ ::test_module:1:3\n  │\n1 │ (((\n  │   ^\n\nerror: mismatched Opening(Round)\n  ┌─ ::test_module:1:2\n  │\n1 │ (((\n  │  ^\n\nerror: mismatched Opening(Round)\n  ┌─ ::test_module:1:1\n  │\n1 │ (((\n  │ ^\n\n")
