src/token_tree/snapshots/ling__token_tree__tests__token_tree_3.snap
---
source: src/token_tree/mod.rs
expression: "test_lex(\")))\")"
---
([], "error: mismatched Closing(Round)\n  ┌─ ::test_module:1:1\n  │\n1 │ )))\n  │ ^\n\nerror: mismatched Closing(Round)\n  ┌─ ::test_module:1:2\n  │\n1 │ )))\n  │  ^\n\nerror: mismatched Closing(Round)\n  ┌─ ::test_module:1:3\n  │\n1 │ )))\n  │   ^\n\n")
