src/token_tree/snapshots/ling__token_tree__tests__token_tree_4.snap
---
source: src/token_tree/mod.rs
expression: "test_lex(\"]{}[\")"
---
(TokenList([
  Group(
    bracket_kind: Curly,
    tokens: TokenList([]),
    span: Span(
      start: 1,
      end: 3,
    ),
  ),
  Group(
    bracket_kind: Square,
    tokens: TokenList([]),
    span: Span(
      start: 3,
      end: 4,
    ),
  ),
]), "error: mismatched Closing(Square)\n  ┌─ ::test_module:1:1\n  │\n1 │ ]{}[\n  │ ^\n\nerror: mismatched Opening(Square)\n  ┌─ ::test_module:1:4\n  │\n1 │ ]{}[\n  │    ^\n\n")
